# machpilot

./: .clang-format  .gitignore  .gitmodules  FORMAT.md  README.md  bag_to_csv.py  config.json  config.yaml  docker-compose.yml  first_time_setup.bash  ghcr.compose.yml  hx711_source.py  init_can.sh  pnpm-lock.yaml  vehicle_dynamics.slx
docker/: Dockerfile.dev  ros_entrypoint.sh
duplicable templates/: CMakeLists.txt
machgui/: log.txt  (+4 more)
src/FSMPilot/: CMakeLists.txt  ErrorManager.hpp  ErrorManagerList.hpp  FSMPilot.cpp  ScreenManager.cpp  ScreenManager.hpp  motorManager.cpp  package.xml
src/FSMPilot/install/: local_setup.sh  setup.sh
src/FSMPilot/log/: latest_build
src/FSMPilot/node/: ActiveSubsystems.csv  CMakeLists.txt  package.xml  run_commands.txt
src/FSMPilot/node/src/: ErrorManager.cpp  FSMPilot.cpp  FSMPilot.hpp  FSMPilotStates.cpp  FSMPilotStates.hpp  FireManager.hpp  ScreenManager.cpp  motorManager.cpp  motorManager.hpp  publisher.hpp  ros_main.cpp  state_machine_node.cpp  state_machine_node.hpp  sub_systems.cpp  sub_systems.hpp
src/FSMPilot/src/: FSMPilot.cpp  FSMPilot.hpp  FSMPilotStates.cpp  FSMPilotStates.hpp  main.cpp  state_machine_node.cpp  state_machine_node.hpp  tinyfsm.hpp
src/FSMPilot/tester/: CMakeLists.txt  package.xml
src/FSMPilot/tester/src/: ros_main.cpp
src/airspeed/: CMakeLists.txt  package.xml
src/airspeed/include/airspeed/: ms4525do  ms4525do_driver.cpp  ms4525do_driver.h
src/airspeed/src/: ms4525do_node.cpp
src/can_interfaces/: CMakeLists.txt  package.xml
src/can_interfaces/src/: can_bridge_node.cpp  can_interface_node.cpp  h20pro_node.cpp
src/drivers/: CMakeLists.txt  package.xml
src/drivers/src/: BNO055_manager.cpp
src/embedded_system/orient/: CMakeLists.txt  package.xml
src/embedded_system/orient/include/bno055/: bno055_driver.h
src/embedded_system/orient/src/: bno055_driver.cpp  bno055_node.cpp
src/embedded_system/pressure/: CMakeLists.txt  package.xml
src/embedded_system/pressure/src/: bmp390_node.cpp  bmp390_node2.cpp
src/embedded_system/pwm/: CMakeLists.txt  package.xml
src/embedded_system/pwm/include/pwm/: pca9685_driver.h
src/embedded_system/pwm/src/: pca9685_driver.cpp  pca9685_node.cpp
src/embedded_system/ublox_gps_driver/: CMakeLists.txt  package.xml
src/embedded_system/ublox_gps_driver/config/: gps_params.yml
src/embedded_system/ublox_gps_driver/include/ublox_gps_driver/: uart_interface.hpp  ublox_messages.hpp  ublox_parser.hpp
src/embedded_system/ublox_gps_driver/src/: gps_node.cpp  main.cpp  uart_interface.cpp  ublox_messages.cpp  ublox_parser.cpp
src/embedded_system/ublox_gps_driver/test/: CMakeLists.txt  test_checksum.cpp  test_gps_configure.cpp  test_gps_mac.cpp  test_parser_gps.cpp  test_uart_interface.cpp  test_uart_raw.cpp
src/gnc/: CMakeLists.txt  package.xml
src/gnc/nonlinear/: CMakeLists.txt  package.xml
src/gnc/nonlinear/src/: casadi_test_node.cpp
src/gnc/state_estimator/: CMakeLists.txt  package.xml
src/gnc/state_estimator/include/state_estimator/: state_estimator.h
src/gnc/state_estimator/src/: state_estimator_node.cpp
src/h20pro/: CMakeLists.txt  package.xml
src/h20pro/src/: can_bridge_node.cpp  can_interface_node.cpp  h20pro_canio.cpp  h20pro_node.cpp
src/logger/: CMakeLists.txt  README.md  package.xml
src/logger/example_logging_node/: CMakeLists.txt  package.xml
src/logger/example_logging_node/src/: ExampleLoggingNode.cpp
src/logger/example_logging_node2/: CMakeLists.txt  package.xml
src/logger/example_logging_node2/src/: ExampleLoggingNode2.cpp
src/logger/log_class/: CMakeLists.txt  package.xml
src/logger/log_class/include/log_class/: log_types.hpp  message.hpp  time_stamp.hpp  trivially_copyable_variant.hpp
src/logger/log_class/src/: log_types.cpp  message.cpp
src/logger/log_file_manager/: CMakeLists.txt  package.xml
src/logger/log_file_manager/src/: file_meta_data.hpp  file_writing_assert.cpp  log_file_reader.cpp  log_file_writer_node.cpp
src/logger/log_tester/: log_parser.py  test.py
src/logger/logger_message/: CMakeLists.txt  package.xml
src/logger/logger_message/msg/: LoggerMessage.msg
src/logger/logger_message/src/: message.hpp  size_test.cpp
src/logger/logger_message_generator/: CMakeLists.txt  message_preprocessor.cpp  package.xml
src/logger/logger_message_interface/: CMakeLists.txt  package.xml
src/logger/logger_message_interface/msg/: Log.msg
src/logger/logger_message_interface/src/: size_test.cpp
src/logger/logger_publisher/: CMakeLists.txt  package.xml
src/logger/logger_publisher/src/: logger_publisher.cpp  logger_publisher.h  main.cpp
src/logger/message_preprossessor/: CMakeLists.txt  print_log_size.cpp
src/logger/msg/: LoggerMessage.msg.in
src/logger/printer_logger_node/: CMakeLists.txt  package.xml
src/logger/printer_logger_node/src/: printer_logger_node.cpp
src/logger/src/: main.cpp
src/orient2/: CMakeLists.txt  package.xml
src/orient2/src/: mpu9250_node.cpp
src/pwm/: CMakeLists.txt  package.xml
src/pwm/include/pwm/: pca  pca9685_driver.cpp  pca9685_driver.h
src/pwm/install/: local_setup.sh  setup.sh
src/pwm/log/: latest_build
src/pwm/src/: pca9685_node.cpp  pca9685_node_2.cpp
src/ros2_SSD1306/: CMakeLists.txt  package.xml
src/ros2_SSD1306/launch/: oled.py
src/ros2_SSD1306/src/: SSD1306_OLED.cpp  camera_sub.cpp
src/ros2_ms4525do/: CMakeLists.txt  package.xml
src/ros2_ms4525do/include/ros2_ms4525do/: ms4525do_i2c_driver.hpp
src/ros2_ms4525do/src/: ms4525do_i2c_driver.cpp  ms4525do_i2c_node.cpp
src/ros2_rfd900x/: CMakeLists.txt  package.xml
src/ros2_rfd900x/src/: rfd900x_node.cpp  rfd900x_node_receiver.cpp  rfd900x_receiver_node.cpp
src/ros2_socketcan/: CMakeLists.txt  README.md  package.xml
src/ros2_socketcan/include/: ros2socketcan.h
src/ros2_socketcan/src/: ros2socketcan.cpp
src/shared_lib/: CMakeLists.txt
src/shared_lib/include/: sensor.hpp
src/shared_lib/include/rc/: README.md
src/state_estimator/: CMakeLists.txt  package.xml
src/state_estimator/include/state_estimator/: state_estimator.h
src/state_estimator/src/: state_estimator_node.cpp
(+324 files in other folders)
